--- a/comptabilite-service/pom.xml
+++ b/comptabilite-service/pom.xml
@@ -1,8 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.personnel.kachiko.comptabilite</groupId>
   <artifactId>comptabilite-service</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <dependencies>
   	<dependency>
   		<groupId>org.personnel.kachiko.comptabilite</groupId>
@@ -16,4 +14,13 @@
   	</dependency>
   </dependencies>
   <packaging>pom</packaging>
+  <modules>
+  	<module>API</module>
+  	<module>core</module>
+  </modules>
+  <parent>
+  	<groupId>org.personnel.kachiko.comptabilite</groupId>
+  	<artifactId>comptabilite-parent</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  </parent>
 </project>
