--- a/comptabilite/pom.xml
+++ b/comptabilite/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.personnel.kachiko</groupId>
+  <groupId>org.personnel.kachiko.comptabilite</groupId>
   <artifactId>comptabilite-parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
