--- a/comptabilite-service/pom.xml
+++ b/comptabilite-service/pom.xml
@@ -3,11 +3,6 @@
   <artifactId>comptabilite-service</artifactId>
   <dependencies>
   	<dependency>
-  		<groupId>org.personnel.kachiko.comptabilite</groupId>
-  		<artifactId>data-access</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
-  	<dependency>
   		<groupId>javax.inject</groupId>
   		<artifactId>javax.inject</artifactId>
   		<version>1</version>
@@ -17,6 +12,11 @@
   		<artifactId>jboss-ejb3x</artifactId>
   		<version>4.2.2.GA</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.personnel.kachiko.comptabilite</groupId>
+  		<artifactId>comptabilite-persistence-api</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
   <packaging>pom</packaging>
   <modules>
@@ -24,8 +24,10 @@
   	<module>core</module>
   </modules>
   <parent>
-  	<groupId>org.personnel.kachiko.comptabilite</groupId>
-  	<artifactId>comptabilite-parent</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
+  	<groupId>org.personnel.kachiko.framework</groupId>
+  	<artifactId>kachiko-framework-service-parent</artifactId>
+  	<version>1.0</version>
   </parent>
+  <version>0.0.1-SNAPSHOT</version>
+  <groupId>org.personnel.kachiko.comptabilite</groupId>
 </project>
