--- a/comptabilite-persistence/pom.xml
+++ b/comptabilite-persistence/pom.xml
@@ -1,23 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.personnel.kachiko.comptabilite</groupId>
   <artifactId>comptabilite-persistence</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
   	<module>API</module>
   	<module>core</module>
   </modules>
   <parent>
-  	<groupId>org.personnel.kachiko.framework</groupId>
-  	<artifactId>kachiko-framework-persistence-parent</artifactId>
-  	<version>1.0</version>
+  	<groupId>org.personnel.kachiko.comptabilite</groupId>
+  	<artifactId>comptabilite-parent</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
   </parent>
   <dependencies>
   	<dependency>
   		<groupId>jboss</groupId>
   		<artifactId>jboss-ejb3x</artifactId>
   		<version>4.2.2.GA</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.personnel.kachiko.framework</groupId>
+  		<artifactId>kachiko-framework-persistence-core</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
   </dependencies>
 </project>
