--- a/comptabilite-service/core/pom.xml
+++ b/comptabilite-service/core/pom.xml
@@ -6,4 +6,11 @@
   	<artifactId>comptabilite-service</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
   </parent>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.personnel.kachiko.comptabilite</groupId>
+  		<artifactId>comptabilite-service-api</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
