--- a/comptabilite-persistence/API/pom.xml
+++ b/comptabilite-persistence/API/pom.xml
@@ -6,4 +6,5 @@
   	<artifactId>comptabilite-persistence</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
   </parent>
+  <packaging>ejb</packaging>
 </project>
