--- a/comptabilite-persistence/core/pom.xml
+++ b/comptabilite-persistence/core/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>comptabilite-persistence-core</artifactId>
-  <packaging>jar</packaging>
+  <packaging>ejb</packaging>
 
   <name>data-access</name>
   <url>http://maven.apache.org</url>
@@ -27,6 +27,7 @@
   		<groupId>org.personnel.kachiko.comptabilite</groupId>
   		<artifactId>comptabilite-persistence-api</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
+  		<scope>runtime</scope>
   	</dependency>
   </dependencies>
 </project>
