--- a/comptabilite-web-parent/comptabilite-web-client/pom.xml
+++ b/comptabilite-web-parent/comptabilite-web-client/pom.xml
@@ -6,4 +6,22 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>comptabilite-web-client</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.personnel.kachiko.comptabilite</groupId>
+  		<artifactId>comptabilite-service-api</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.sun.faces</groupId>
+  		<artifactId>jsf-api</artifactId>
+  		<version>2.2.12</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.sun.faces</groupId>
+  		<artifactId>jsf-impl</artifactId>
+  		<version>2.2.12</version>
+  	</dependency>
+  </dependencies>
+  <packaging>war</packaging>
 </project>
