--- a/comptabilite/pom.xml
+++ b/comptabilite/pom.xml
@@ -81,6 +81,11 @@
   		<artifactId>jboss-ejb3x</artifactId>
   		<version>4.2.2.GA</version>
   	</dependency>
+  	<dependency>
+  		<groupId>javax.enterprise</groupId>
+  		<artifactId>cdi-api</artifactId>
+  		<version>2.0-EDR1</version>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
